--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-social-icons": "^4.1.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
